tests/NormalTests/paczka1/fuzzy1/95088218.err
Error in line 1: WuFwzlc9 S526 83,5
Error in line 2: WuFwzlc9 S61 44,4
Error in line 9: tGkzcOR S61 23,7
Error in line 12: Wgflz8QWvZp S61 91,4
Error in line 30: tGkzcOR S619 26,9
Error in line 32: tGkzcOR S370 63,7
Error in line 36: Wgflz8QWvZp S69 0,7
Error in line 34: WuFwzlc9 S61 79,5
